# FinTrendAnalyser

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data_ingestion/: fetch_financial_news.py  fetch_historical_stock_data.py  fetch_intraday_stock_data.py
fintrendanalyser/data_ingestion/: fetch_economic_data.py  fetch_financial_news.py  fetch_historical_stock_data.py  fetch_intraday_stock_data.py  fetch_sec_filings.py  fetch_twitter_sentiment.py
fintrendanalyser/data_processing/: transform_financial_news.py
fintrendanalyser/utils/: constants.py  database.py  logging.py
